[package]
name = "scoop-helper"
version = "0.1.0"
authors = ["Tobias Nienhaus <me@tobiasnienhaus.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
regex = "1.4.5"
lazy_static = "1.4.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
toml = "0.5.8"
chrono = "0.4.19"
